[metadata]
name = bricks-occupant
summary = Dockerstack execution agent
description-file =
    README.rst
author = Cloud A
author-email = info@clouda.ca
home-page = https://www.clouda.ca
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    bricks-occupant
